# JuSubtitleAutoTranslate

./: LICENSE  README-en.md  README.md  config.ini  example_usage.md  pyproject.toml  pytest.ini  requirements.txt  sample-eng.srt  srt_utils.py  stepbystep.md  translate.py  小白安装教程.md
.roo/: mcp.json
src/: clean.py  config.ini  gui.py  help.html  language_code_utils.py  model_utils.py  project_config.ini  srt_utils.py  translate.py
test-files/: sample3-zh-CN.srt  sample4.txt
tests/: test_language_code_utils.py  test_srt_utils.py
