[project]
name = "JuSubtitleAutoTranslate"
version = "1.0.0"
date = "2025/10"
description = "一个关于自动翻译字幕的项目"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "transformers==4.40.2",
    "torch==2.2.2",
    "sentencepiece==0.2.0",
    "tkhtmlview>=0.3.1",
    "numpy<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
#    "sacremoses>=0.1.1",
]
